--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<style>
+    background-color: #46af89;
+</style>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -7,7 +10,8 @@
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover">
+
         <div style="display: contents">%sveltekit.body%</div>
     </body>
-    <html data-theme="cupcake">
-</html>
+</html>>
+        
