--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover">
+
         <div style="display: contents">%sveltekit.body%</div>
-    </body>
-    <html data-theme="cupcake">
-</html>
+</html>>
+        
